2009-03-10  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * data/filetype_extensions.conf, data/filetypes.actionscript,
   src/about.c, src/document.c, src/filetypes.c, src/filetypes.h,
   src/highlighting.c, src/plugindata.h, src/symbols.c,
   tagmanager/Makefile.am, tagmanager/actionscript.c,
   tagmanager/makefile.win32, tagmanager/parsers.h, THANKS, wscript:
   Add filetype ActionScript (patch by Chris Macksey, thanks).
   Update type keywords only for real C-like languages.
   Fix wrong sorting of Assembler and Ada filetypes.
 * plugins/classbuilder.c:
   Use G_DEFINE_TYPE in the GTK+ class template instead of manual code.
   Other minor cleanups.


2009-03-05  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/notebook.c:
   Don't use menu item images for the tab bar menu to save some
   vertical space.
 * data/filetypes.fortran, tagmanager/fortran.c:
   Add keyword 'extends' and fix Fortran parser to support the
   'extends' keyword (closes #2654492).
 * geany.glade, plugins/export.c, src/interface.c, src/printing.c,
   src/search.c, src/toolbar.c:
   Fix punctuation.


2009-03-03  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * src/about.c, THANKS:
   Added Jari Rahkonen to list of Finnish translators.


2009-03-02  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * geany.pc.in:
   Adjust minimum required GTK version.
 * src/Makefile.am, wscript:
   Add main.h to the list of installed header files.
 * geany.glade, src/document.c, src/documentprivate.h, src/interface.c,
   src/notebook.c, src/ui_utils.c:
   Remove GeanyDocumentPrivate::tabmenu_label.
   Disable the default tab bar menu for the main notebook widget and
   use a custom menu instead which lists all open files as usual plus
   'Close Other Documents' and 'Close All' menu items.


2009-02-27  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/callbacks.c, src/search.c, src/ui_utils.c, src/ui_utils.c:
   Move ui_set_search_entry_background() into ui_utils.c.