@@ -1666,6 +1666,13 @@ It must be an absolute path.
 Leave it blank to use the current working directory.</dd>
 <dt>Project files</dt>
 <dd>Path to start in when opening project files.</dd>
+<dt>Extra plugin path</dt>
+<dd>Geany looks by default in the global installation path and in the
+configuration directory. The path entered here will be searched additionally
+for plugins. Usually you do not need to set an additional path to search for
+plugins. It might be useful when Geany is installed on a multi-user machine
+and additional plugins should be available in a custom location for all users.
+Leave blank to not set an additional lookup path.</dd>
 </dl>
 </div>
 </div>
@@ -4705,7 +4712,7 @@ USE OR PERFORMANCE OF THIS SOFTWARE.</p>
 <div class="footer">
 <hr class="footer" />
 <a class="reference external" href="geany.txt">View document source</a>.
-Generated on: 2009-02-25 23:11 UTC.
+Generated on: 2009-03-13 09:51 UTC.
 Generated by <a class="reference external" href="http://docutils.sourceforge.net/">Docutils</a> from <a class="reference external" href="http://docutils.sourceforge.net/rst.html">reStructuredText</a> source.
 
 </div>
