@@ -1383,6 +1383,13 @@ Startup path
 Project files
     Path to start in when opening project files.
 
+Extra plugin path
+	Geany looks by default in the global installation path and in the
+	configuration directory. The path entered here will be searched additionally
+	for plugins. Usually you do not need to set an additional path to search for
+	plugins. It might be useful when Geany is installed on a multi-user machine
+	and additional plugins should be available in a custom location for all users.
+	Leave blank to not set an additional lookup path.
 
 
 General Miscellaneous tab in preferences dialog
